cmake_minimum_required(VERSION 3.5)
project (main)
set(CMAKE_CXX_STANDARD 17)
add_subdirectory(Net)
add_subdirectory(Worker)
include_directories(./Net)
include_directories(./Worker)
include_directories(./Share/App)
add_executable(${PROJECT_NAME} main.cpp)
target_link_libraries(${PROJECT_NAME}  protobuf  pthread z glog gflags IOLoop Worker)
