cmake_minimum_required(VERSION 3.5)
project (main)
set(CMAKE_CXX_STANDARD 17)
add_subdirectory(Net)
add_subdirectory(Server)
add_subdirectory(File)
include_directories(./Net)
include_directories(./Server)
include_directories(./Share/App)
include_directories(./File)
add_executable(${PROJECT_NAME} main.cpp)
target_link_libraries(${PROJECT_NAME}  protobuf  pthread z glog gflags IOLoop File)
