cmake_minimum_required(VERSION 3.15)
project (main)
set(CMAKE_CXX_STANDARD 17)
add_subdirectory(Net)
add_subdirectory(File)
add_subdirectory(Http)
include_directories(./Net)
include_directories(./Http)
include_directories(./Share/App)
include_directories(./File)
add_executable(${PROJECT_NAME} main.cpp)
target_link_libraries(${PROJECT_NAME}  protobuf  pthread z glog gflags IOLoop File HttpServer)
