cmake_minimum_required(VERSION 3.5)
project (Server)
set(CMAKE_CXX_STANDARD 17)
include_directories(../Net)
include_directories(../Memory)
file(GLOB PROJECT_SOURCE_FILES "*.cpp")
add_library(${PROJECT_NAME} ${PROJECT_SOURCE_FILES})
target_link_libraries(${PROJECT_NAME}  protobuf  pthread z glog gflags IOLoop)